Finish Project Before deployment

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -33,6 +33,8 @@
                         </div>
                         <div class='p-5'>
                             <a href="{% url 'accounts:profile_edit'%}"class="boxed-btn3 w-100">Edit Profile</a>
+                            <hr>
+                            <a href="{% url 'logout'%}"class="boxed-btn3 w-100">LogOut</a>
                         </div>
                     </div>
                 </div>
