--- a/job/templates/job/job_details.html
+++ b/job/templates/job/job_details.html
@@ -47,7 +47,7 @@
                     <div class="descript_wrap white-bg">
                         <div class="single_wrap">
                             <h4>Job description</h4>
-                            <p>{{job.description}}</p>
+                            <p>{{job.describtion}}</p>
                         </div>
                     </div>
                     <div class="apply_job_form white-bg">
