--- a/job/templates/job/job_list.html
+++ b/job/templates/job/job_list.html
@@ -59,14 +59,14 @@
                                 <div class="single_jobs white-bg d-flex justify-content-between">
                                     <div class="jobs_left d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/svg_icon/1.svg" alt="">
+                                            <img src='' alt="" style = "position:absolute; left:25px; top:30px;">
                                         </div>
                                         
                                         <div class="jobs_conetent">                                    
                                             <a href="{% url 'jobs:job_detail' job.slug%}"><h4>{{job.title}}</h4></a>
                                             <div class="links_locat d-flex align-items-center">
                                                 <div class="location">
-                                                    <p> <i class="fa fa-map-marker"></i> California, USA</p>
+                                                    <p> <i class="fa fa-map-marker"></i> Egypt, Cairo</p>
                                                 </div>
                                                 <div class="location">
                                                     <p> <i class="fa fa-clock-o"></i> {{job.job_type}}</p>
